online user and solid frontend

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,18 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# jambonz telephony integration
+JAMBONZ_WEBHOOK_TOKEN=
+JAMBONZ_STREAM_URL=
+JAMBONZ_STT_VENDOR=google
+JAMBONZ_STT_LANGUAGE=en-US
+JAMBONZ_WEBRTC_URI=
+JAMBONZ_WEBRTC_USERNAME=
+JAMBONZ_WEBRTC_PASSWORD=
+JAMBONZ_TTS_VOICE=female
+JAMBONZ_SIP_WSS=
+JAMBONZ_SIP_DOMAIN=
+JAMBONZ_SIP_USERNAME=
+JAMBONZ_SIP_PASSWORD=
+JAMBONZ_SIP_DISPLAY_NAME="Web Agent"
