added websocket feature

--- a/.env.example
+++ b/.env.example
@@ -20,24 +20,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql.jambonz
+DB_PORT=3306
+DB_DATABASE=jambones
+DB_USERNAME=jambones
+DB_PASSWORD=jambones
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DRIVER=file
+CACHE_DRIVER=file
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=file
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -73,7 +70,10 @@ JAMBONZ_WEBRTC_URI=
 JAMBONZ_WEBRTC_USERNAME=
 JAMBONZ_WEBRTC_PASSWORD=
 JAMBONZ_TTS_VOICE=female
-JAMBONZ_SIP_WSS=
+# Example: NodePort listener exposed at 192.168.1.23:32443
+JAMBONZ_SIP_WSS=wss://192.168.1.23:32443
+# The SIP identity (username@domain:port) and password are provided at login,
+# so these env vars are optional and only used for display defaults.
 JAMBONZ_SIP_DOMAIN=
 JAMBONZ_SIP_USERNAME=
 JAMBONZ_SIP_PASSWORD=
